Structure of GDPR Section

--- a/Report/example_report.tex
+++ b/Report/example_report.tex
@@ -49,6 +49,37 @@
 		
 	\chapter{General Data Protection Regulation}
 	\startsection
+	Overview
+	\section{Core Concepts}
+	\startsection
+	bla
+	\closesection
+
+	\section{GDPR Entities}
+	\startsection
+	bla
+	\closesection
+
+	\section{Data subject rights}
+	\startsection
+	bla
+	\closesection
+
+	\section{Consent and Privacy Policy}
+	\startsection
+	bla
+	\closesection
+
+	\section{Sanctions}
+	\startsection
+	bla
+	\closesection
+
+	\section{Miscellaneous}
+	\startsection
+	bla
+	\closesection
+
 	\closesection
 	
 	\chapter{Crowd-Sourcing Methods}
