GDPR Overview and Core Concepts

--- a/Report/example_report.tex
+++ b/Report/example_report.tex
@@ -48,11 +48,29 @@
 		\closesection
 		
 	\chapter{General Data Protection Regulation}
-	\startsection
-	Overview
+	The General Data Protection Regulation, referred to as GDPR, is in effect across the European Union from May 25, 2018.
+	The Regulation is directly applicable to processing of personal data in the European Union and data collected from its data subjects.
+	One central aspect of the regulation is, that it inludes a significant escalation in potential penalties (up to 4\% of the global revenue).
+	Figure \ref{fig:enforcement_tracker} shows how enforcement activities increase from commencement until October 2021.
+	For instance, Amazon was fined 746 million \texteuro \ in July 2021 \cite{EnforcementTracker}
+	\begin{figure}
+		\includegraphics{EnforcementTracker_21-10-12.PNG}
+		\caption{Enforcement activities \cite{EnforcementTracker}}
+		\label{fig:enforcement_tracker}
+	\end{figure}
+	
 	\section{Core Concepts}
 	\startsection
-	bla
+	GDPR defines certain core concepts which are important for the further understanding of the regulation.\\
+	\textbf{Personal data} is any information relating to an identified or identifieable natural person.
+	There are three subtypes of interest to personal data. 
+	First of, \textbf{sensible data} is defined as personal data that is revealing race, ethnic origin, political opinions, religious or philosophical beliefs, trade union membership, health, sex life and sexual orientation, genetic data or biometric data.
+	Next, there is data relating to \textbf{criminal offences} and convictions.
+	Finally, \textbf{health data} is personal data relating to physical or mental health of an individual, including the provision of healt care services, which reveal information about his or her health status.\\
+	\textbf{Pseudonymization} is the processing of personal data in such a manner that the personal data can no longer be attributed to a specific data subject without the use of additional information, provided that such additional information is kept separately and is subject to technical and organisational measures to ensure that the personal data are not attributed to an identified or identifieable natural person.
+	\textbf{Anonymization} eliminates personal data so that data subjects can no longer be identified. 
+	Anonymized data is excluded from GDPR altogether because anonymized data is no longer personal data.
+	\textbf{Data processing} means any operation or set of operations performed upon personal data or sets of personal data, whether or not by automated means, such as collection, recording, organisation, structuring, storage, adaptation or alternation, retrieval, consultation, use, disclosure by transmission, dissemination or otherwise making available, alignment or combination, restriction, erasure or destruction.
 	\closesection
 
 	\section{GDPR Entities}
@@ -78,8 +96,6 @@
 	\section{Miscellaneous}
 	\startsection
 	bla
-	\closesection
-
 	\closesection
 	
 	\chapter{Crowd-Sourcing Methods}
