--- a/Report/references.bib
+++ b/Report/references.bib
@@ -131,3 +131,8 @@ title = "Nokia Ava Crowd Analytics",
 author = "NOKIA",
 url = {\\ https://www.nokia.com/networks/services/nokia-ava-crowd-analytics/, \\ https://www.nokia.com/networks/portfolio/insights-and-analytics/}
 }
+
+@online {EnforcementTracker,
+title = "Enforcement Tracker",
+url = {https://www.enforcementtracker.com/}
+}
