add Data Processing Entities

--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -73,14 +73,36 @@
 	\textbf{Data processing} means any operation or set of operations performed upon personal data or sets of personal data, whether or not by automated means, such as collection, recording, organisation, structuring, storage, adaptation or alternation, retrieval, consultation, use, disclosure by transmission, dissemination or otherwise making available, alignment or combination, restriction, erasure or destruction.
 	\closesection
 
-	\section{GDPR Entities}
+	\section{Data Processing Entities}
 	\startsection
-	bla
+	The GDPR defines different entities responsible for data processing. These entities have different responsibilites.
+	Namely there are the following:
+	\begin{enumerate}[]
+		\item The Data Controller (Art. 24 \cite{EUdataregulations2018})
+		determines the purpose and means of the personal data processing.
+		In general, controllers bear primary responsibility for ensuring that processing activities are compliant with the regulation.
+		\item The Data Processor (Art. 28 \cite{EUdataregulations2018})
+		acts on the conroller's behalf. 
+		There is a binding written agreement between the two entities. 
+		The controller must ensure the processor's compliance with GDPR.
+		\item Joint Controller (Art. 26 \cite{EUdataregulations2018}) is a Data Controller, containing multiple entities.
+		Given such a Scenario, the different entities must have an agreement on their respective responsibilites.
+	\end{enumerate}
 	\closesection
 
 	\section{Data subject rights}
 	\startsection
-	bla
+	A identified or identifiable natural person, subject to it's data being processed by a controller, is called a \textbf{data subject}.
+	Each data subject has a set of rights under GDPR:
+	\begin{enumerate}[]
+		\item Right of access (Art. 15)
+		\item Right to rectification (Art. 16)
+		\item Right to erasure (Art. 17)
+		\item Right to restriction (Art. 18)
+		\item Right to data portability (Art. 20)
+		\item Right to object (Art. 21)
+		\item Right not to be subject to decisions based solely on automated processing which produces legal or similarly significant effects (Art. 22)
+	\end{enumerate}
 	\closesection
 
 	\section{Consent and Privacy Policy}
