--- a/Report/references.bib
+++ b/Report/references.bib
@@ -136,3 +136,10 @@ url = {\\ https://www.nokia.com/networks/services/nokia-ava-crowd-analytics/, \\
 title = "Enforcement Tracker",
 url = {https://www.enforcementtracker.com/}
 }
+
+@online{EUdataregulations2018,
+    title = {2018 reform of EU data protection rules},
+    url = {https://gdpr-info.eu/},
+    author = {European Commission},
+    date = {2018-05-25}
+  }
