--- a/Report/references.bib
+++ b/Report/references.bib
@@ -114,7 +114,7 @@ doi = {10.1016/j.chb.2016.09.030}
 title = "Jaron Lanier Fixes the Internet | NYT Opinion",
 author = {The New York Times},
 year = 2019,
-month = September,
+month = {09},
 url = {\\ https://www.youtube.com/watch?v=Np5ri-KktNs}
 }
 
@@ -122,7 +122,7 @@ url = {\\ https://www.youtube.com/watch?v=Np5ri-KktNs}
 title = "Use wisdom of crowds to design smarter cities, businesses and networks",
 author = "Malla Poikela",
 year = 2018,
-month = May,
+month = {05},
 url = "\\ https://www.nokia.com/blog/use-wisdom-crowds-design-smarter-cities-businesses-and-networks/"
 }
 
@@ -133,13 +133,15 @@ url = {\\ https://www.nokia.com/networks/services/nokia-ava-crowd-analytics/, \\
 }
 
 @online {EnforcementTracker,
+shorthand = "ENFT",
 title = "Enforcement Tracker",
 url = {https://www.enforcementtracker.com/}
 }
 
 @online{EUdataregulations2018,
+	shorthand = "GDPR",
     title = {2018 reform of EU data protection rules},
     url = {https://gdpr-info.eu/},
     author = {European Commission},
     date = {2018-05-25}
-  }
+}
