Added chaptermark so headline is not overcrowded

--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -51,6 +51,7 @@
 		\closesection
 		
 	\chapter{General Data Protection Regulation}
+	\chaptermark{GDPR}
 	The General Data Protection Regulation, referred to as GDPR, is in effect across the European Union from May 25, 2018.
 	The Regulation is directly applicable to processing of personal data in the European Union and data collected from its data subjects.
 	One central aspect of the regulation is, that it inludes a significant escalation in potential penalties (up to 4\% of the global revenue).
