add data subject rights

--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -99,13 +99,32 @@
 	A identified or identifiable natural person, subject to it's data being processed by a controller, is called a \textbf{data subject}.
 	Each data subject has a set of rights under GDPR:
 	\begin{enumerate}[]
-		\item Right of access (Art. 15)
-		\item Right to rectification (Art. 16)
-		\item Right to erasure (Art. 17)
-		\item Right to restriction (Art. 18)
+		\item Right of access (Art. 15):
+		Controllers are obligated to provide all personal information being processed about a data subject upon request of the data subject.
+		\item Right to rectification (Art. 16):
+		Controllers are obligated to rectify or complete wrong or incomplete data given a data subjects request to do so.
+		\item Right to erasure (Art. 17):
+		One has the right to request deletion of ones personal data.
+		Generally, given such a scenario, a controller must comply with such a request and furthermore inform all processors and joint controllers to eliminate the appropriate data aswell.
+		Furthermore the same procedure must be executed without being requested to do so under certain circumstances.
+		For instance this applies, if the personal data is no longer necessary, the data subject has withdrawen consent or a delation is mandatory due to other laws.
+		Ereasure of personal data is not lawful, if higher interests are diminished, controllers must namely not comply with such requests, when
+		\begin{enumerate}
+			\item the right of freedom of expression and information would be violated
+			\item the controllers can not follow legal obligations without the personal data
+			\item there is a public interest
+			\item personal data is archived in public interest, used for scientific or historical research, or is used for statistical purposes
+			\item the data is used to establish, excercise or defend of legal claims
+		\end{enumerate}
+		\item Right to restriction (Art. 18):
+		In General, a data subject has the right to restrict processing of it's personal data.
 		\item Right to data portability (Art. 20)
-		\item Right to object (Art. 21)
+		Controllers must provide collected data in machine and human readable format upon request, furthermore data subjects have the right to transfer the data to another controller.
+		\item Right to object (Art. 21):
+		One can object to processing of ones personal data, then controllers generally controllers are prohibited to process ones personal data.
 		\item Right not to be subject to decisions based solely on automated processing which produces legal or similarly significant effects (Art. 22)
+		Controllers can not make decisions solely based on automatic processing, if the decisions produce a legal or similarly significant effect. 
+		However necessary decisionmakeing for a controller to get into a contract with the data subject is explicitely excluded from this right.
 	\end{enumerate}
 	\closesection
 
