add section on privacy policy and consent

--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -130,7 +130,32 @@
 
 	\section{Consent and Privacy Policy}
 	\startsection
-	bla
+	Processors must provide a Privacy Policy.
+	In the policy, basic information regarding processing activities must be provided in an easily understandable fashion.
+	Given a data subject reads the policy, it should afterwards be well informed about the processing activities with it's personal data.\\
+	Controllers are prohibited to process personal data without the data subjects explicit consent.
+	Therefor processors must acquire the data subjects consent, however this must be achieved in a way that:
+	\begin{enumerate}[a)]
+		\item Consent is freely given
+		\item Consent is specific
+		\item Data Subjects are informed on what they give consent for
+		\item Consent is unambiguous indication of data subjects wishes
+	\end{enumerate}
+	In particular the data subject must have a legitimate choice, meaning it can not feel compelled to consent and there must not be negative consequences if consent is not given.
+	This implies that consent can not be bundled with acceptance of other terms and conditions, 
+	it can not be tied to the provision of a contract or service, if the processing is not strictly neccessary for the perfomance of such a contract or service and
+	data subject should be able to selectively consent to separate processing activities - i.e. a data subject should be able to consent to processing of performance data but reject processing of marketing data.\\
+	Due to the above regulations, contollers must manage to demonstrate data subject's consent and ensure potential withdrawal.
+	Therefor controllers should keep clear records of what a person has consented to, when and how consent was obtained i.o to be able to give evidence of consent if challenged.
+	In particular, controllers should store:
+	\begin{itemize}
+		\item date of consent
+		\item method of consent
+		\item who obtained consent
+		\item what information was provided to the person consenting
+	\end{itemize}
+
+
 	\closesection
 
 	\section{Sanctions}
