Sanctions section - this completes the GDPR chapter

--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -160,12 +160,9 @@
 
 	\section{Sanctions}
 	\startsection
-	bla
-	\closesection
-
-	\section{Miscellaneous}
-	\startsection
-	bla
+	GDPR imposes hefty fines for non compliance with the regulation.
+	It differs between two groups of violations: violations with respect to record-keeping, security, breach notifications and privacy impact assassments and violations with respect to having a legal justification for processing, complying with the rights of data subjects and cross-border data transfers.
+	The first group is subject to a maximum penalty of the highest of 10 million Euro or 2 \% of the entity's global revenue and the second group is subject to a maximum penalty of the highest of 20 million Euro or 4 \% of the entity's global revenue
 	\closesection
 	
 	\chapter{Crowd-Sourcing Methods}
