--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -168,6 +168,10 @@
 	\chapter{Crowd-Sourcing Methods}
 	\startsection
 	\closesection
+
+	\chapter{Considerations in Designing Crowd-Sourcing Methods}
+	\startsection
+	\closesection
 	
 	\chapter{Related Work \cite{LanierWeylBlueprint}}
 	\startsection
