Update tex with skeleton of intended section, more for testing.

--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -71,9 +71,14 @@
 		\closesection
 	
 	\chapter{Methodology}
+	
+	\section{Nokia AVA}
+	\startsection
+	\subsection{Case studies}
+	\closesection	
+	\section{Others}
 	\startsection
 	\closesection
-
 	\chapter{General Data Protection Regulation}
 	\chaptermark{GDPR}
 	The General Data Protection Regulation, referred to as GDPR, is in effect across the European Union from May 25, 2018.
