Minor fix with subsection and deleted Example Chapter

--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -40,16 +40,7 @@
 	\end{abstract}
 
 	\tableofcontents
-
-	\chapter{Example Chapter}
-		This is an example of a section. As you see, it is just a standard {\LaTeX} section. Here is a footnote%
-		\footnote{This is a footnote}.
-
-		\section{Background and Motivation}
-		\startsection
-			It's all standard \LaTeX, as you can see. This is a very nice paper:
-			\nocite{*}
-		\closesection
+	\nocite{*}
 
 	\chapter{Introduction}
 		\section{Background and Motivation}
@@ -74,7 +65,9 @@
 	
 	\section{Nokia AVA}
 	\startsection
-	\subsection{Case studies}
+		\subsection{Case studies}
+		\startsubsection
+		\closesection
 	\closesection	
 	\section{Others}
 	\startsection
