Further additions to the methods, still not finished.

--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -211,29 +211,49 @@
 	China Mobile was concerned with increased energy usage across their network especially due to rolling out 5G, and searched for an intelligent energy management system that does not impact customer experience.
 	A solution has been found in the form of Nokia AVA for Energy Efficiency, and resulted in a reduction of short-term energy use of 5\%, made future reduction of 20\% possible, reduced air conditioning energy usage by 74\%, generally balanced performance requirements with energy saving, and maintained the network performance successfully.
 	\closesection	
-	\section{Other methods}
+	\section{Additional methods}
 	\startsection
 	\subsection{New York City building inspection}
-	New Yorks department of buildings had too few inspectors to cover all complaints about illegal conversions of apartments in a sensible manner in the year 2011. This is a complicated situation as such conversions of living space increases the risk fire hazards among other dangers. As an answer, a team led by Michael FLowers has used predictive analytics have been used to prioritize the complaints by also incorporation the experience of senior inspectors. [Michael Flowers, “Chapter 15. Beyond open data: The data-driven city,” Beyond Transparency: 2013 Code for America, October 16, 2013, http://beyondtransparency.org/chapters/part-4/beyond-open-data-the-data-driven-city/.]\\
+	New Yorks department of buildings had too few inspectors to cover all complaints about illegal conversions of apartments in a sensible manner in the year 2011. This is a complicated situation as such conversions of living space increases the risk fire hazards among other dangers. As an answer, a team led by Michael Flowers has used predictive analytics have been used to prioritize the complaints by also incorporation the experience of senior inspectors. [Michael Flowers, “Chapter 15. Beyond open data: The data-driven city,” Beyond Transparency: 2013 Code for America, October 16, 2013, http://beyondtransparency.org/chapters/part-4/beyond-open-data-the-data-driven-city/.]\\
 	Thanks to this new prioritization, the false positives of the complaints have been drastically reduced, which increased the ration of resulting vacation orders from 13\% to 70\%. [Alex Howard, “Predictive data analytics is saving lives and taxpayer dollars in New York City,” O’Reilly Radar, June 26, 2012, http://radar.oreilly.com/2012/06/predictive-data-analytics-big-data-nyc.html.]\\
 	Additionally, this has positively influenced the incidents of deaths due to fire incidents as mentioned by the city. [Viktor Schönberger and Kenneth Cukier, “Big data in the Big Apple,” Slate, March 6, 2013, www.slate.com/articles/technology/future_tense/2013/03/big_data_excerpt_how_mike_flowers_revolutionized_new_york_s_building_inspections.html.]
 [FDNY Foundation, “FDNY records first month with zero fire-related deaths in department history,” July 5, 2015, www.fdnyfoundation.org/fdny-records-first-month-with-zero-fire-related-deaths-in-department-history/.]
 
-	
-	
-	
-	
 
 	\subsection{Wiki survey in New York city}
+[https://www.bitbybitbook.com/en/asking-questions/how/wiki/]\\
+Wiki surveys differ from normal surveys in the way that the answers do not have a finite number, but are in an open form, so that each participant can give answers outside of the expected scope. These outside answers are also exactly the reason to perform such a survey as it allows for new perspectives to be considered. For example New York City performed a wiki survey in 2010 on its sustainability plans, and the eigth of the top ten ideas where generated from the survey takers instead of being in the set of seed answers.
 
-	\subsection{Street Bump}
-	https://www2.deloitte.com/us/en/insights/deloitte-review/issue-20/people-for-smarter-cities-collective-intelligence-decision-making.html or [EGG17]\\	
+
+	\subsection{Waze and Boston}
+	[https://www.americancityandcounty.com/2016/02/03/the-information-superhighway/]\\
+	Waze is an application that specialises on route planning and traffic avoidance.
+	Bostons traffic management department partnered with Waze to combat the cities traffic issues. Waze delivers hereby the data of driving app users to the Boston traffic engineers which then adjust the cities traffic signals. The traffic department also sends back this updated information in addition with future planned adjustements to Waze in turn.
+
+	\subsection{Street Bump and Boston}
+	https://www2.deloitte.com/us/en/insights/deloitte-review/issue-20/people-for-smarter-cities-collective-intelligence-decision-making.html or [EGG17]\\
+	In the same manner as the Waze partnership, Boston used the Street Bump application for combating and mapping bumpy roads and potholes. This allowed the city to repair the worst cases of potholes and, as an unexpected side benefit, sunken manhole covers.
+	
+	\subsection{Yelp and Boston}
+	[https://www.govtech.com/dc/articles/what-can-boston-restaurant-inspectors-learn-from-yelp-reviews.html]\\
+	A third partnership performed by Boston, was with Yelp and economists from Harvard to tackle the issue of health inspections at restaurants b using predictive algorithms and experiece from health inspectors.
+	Instead of random inspections, information from recent customer reviews on Yelp and historical patterns are taken into account to better target the restaurants under suspicion of health code violations. The increase in found violations has been estimated to be around 30\%-50\%.
+	[Peter Bull, Isaac Slavitt, and Greg Lipstein, “Harnessing the power of the crowd to increase capacity for data science in the social sector,” 2016 ICML Workshop on #Data4Good, June 24, 2016, https://arxiv.org/pdf/1606.07781.pdf.][Edward L. Glaeser et al., “Crowdsourcing city government: Using tournaments to improve inspection accuracy,” NBER working paper no. 22124, March 2016, www.scottkom.com/articles/Glaeser_Hillis_Kominers_Luca_Crowdsourcing_City_Government.pdf.]
+	
 	
 	\subsection{StarHub and Nokia}
 	[https://www.marketing-interactive.com/nokia-and-starhub-join-analytics-force-hopeful-in-creating-effective-advertising]
 	A further partnership betweeen Nokia and the singaporean  based communication provider StarHub has been created with the goal of 'effective advertising'. This means that marketers can for example plan their future business locations and placements of advertisements due to gained insights from consumer travel patterns. StarHub hereby plans to use Nokia AVA and other capabilities from Nokia. 
+	\subsection{Test case studies and modeling}
+	[[CDA16] Crowd-Sourcing for Smart Cities ]
+	Test case studies have been performed with current examples of crowd-sourcing like Street Bump to show how certain sectors can profit from crowd-sourcing methods. For example in the dimension of transportation, it would be possible to dynamically allocate parking spaces with crowd-sourcing or similar to previous examples the app CycleAtlanta that records bycicle trips and sends the data to the city planners of Atlanta. In the sector of education, sites like Khan Academy or Un-Academy allow for educators to teach to groups of all ages. Other education based sites that use crowd-sourced are for example sites like Wikipedia, Quora or StackExchange. These sites are visited by countless users everyday.
+	%SHOULD I MENTION MORE? In the end they try to create a model for crwod-sourcing and then a unfied model.
+	\subsection{Mobile crowd-sourcing}
+	[[KLJ+19] Mobile Crowdsourcing in Smart Cities: Technologies, Applications, and Future Challenges]
+	While some examples, more a general work about mobile crowd sourcing.
 	
 	\closesection
+
 
 	\chapter{Considerations in Designing Crowd-Sourcing Methods}
 	\startsection
